--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="controls-group">
           <label for="grade-select">학년</label>
           <select id="grade-select">
+            <option value="all">전체</option>
             <option value="1">1학년</option>
             <option value="2">2학년</option>
             <option value="3">3학년</option>
@@ -36,6 +37,7 @@
           <label for="unit-select">단원</label>
           <select id="unit-select">
             <!-- JS에서 동적으로 채울 예정, 일단 더미로 -->
+            <option value="all">전체</option>
             <option value="greeting">인사 / 소개</option>
             <option value="school">학교 생활</option>
           </select>
