한국어 단어장 국가 디테일 추가

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>한국어 단어장</title>
 
   <!-- 모바일에서 반응형 동작을 제대로 하기 위한 설정 -->
@@ -13,8 +14,8 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="site-title">한국어 단어장</h1>
-      <p class="site-subtitle">1·2·3학년 학년별 / 단원별 단어 학습</p>
+      <h1 class="site-title"><a href="/">한국어 단어장</a></h1>
+      <p class="site-subtitle">관산중학교 연구부</p>
     </div>
   </header>
 
