한국어 단어장 랜덤 기능 추가

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
           <label for="search-input">단어 검색</label>
           <input id="search-input" type="text" placeholder="한국어 단어 검색" />
         </div>
+
+  <div class="controls-group">
+    <label>&nbsp;</label>
+    <button id="shuffle-button" type="button">🎲 무작위 보기</button>
+  </div>
+
       </section>
 
       <!-- 단어 리스트 영역 -->
